Revision history for Redis::CappedCollection module

1.03  Thu Jan  07 2016
    CHANGES:
    - Works with a Redis server 'maxmemory-policy' setting 'noeviction' only.
    - Added 'redis_config_ok' method.
    - $E_REDIS_DID_NOT_RETURN_DATA, $E_UNKNOWN_ERROR errors added.
    - Updated version of the data structure.
    FIXES:
    - Incorrect analysis an error related to not enough memory.

1.02  Thu Sep  03 2015
    CHANGES:
    - Redis::CappedCollection does not close connection to redis server (including '->quit' method)
      if it was provided by user.
    - More convenient error codes naming.
    FIXES:
    - Fixes of test plans.

1.01  Tue Jul  07 2015
    CHANGES:
    - Updated behaviour of 'older_allowed' attribute that controls adding an element that's
      older than the last element removed from collection.
    - Added 'clear_collection' method.
    FIXES:
    - Small correction in destruction procedure.
    - Fixes of documentation and MANIFEST.

1.00  Mon Jun  15 2015

    !!! This is a major upgrade that changes API. It's strongly advised to study
    revised documentation and update your code where necessary !!!

    !!! Data structures created on the server by previous versions of the module
    are incompatible with this release. Existing collections must be recreated
    after updating to this release. !!!

    CHANGES:
    - Redis::CappedCollection->new() is deprecated and will be removed in future.
      Please use either create() or open() instead.
    - In the parameters of the methods 'redis' may be either a Redis object
      or a hash reference of parameters to create a Redis object.
    - Changed the order of the arguments of the 'insert' method.
    - The list ID and data ID arguments are mandatory for 'insert' method.
    - Added 'data time' argument for 'update' method.
    - Method 'info' renamed to 'list_info'.
    - Method 'exists' renamed to 'list_exists'.
    - Method 'drop' renamed to 'drop_list'.