@@ -50,6 +50,13 @@ SKIP: {
 # For Test::RedisServer
 isa_ok( $redis, 'Test::RedisServer' );
 
+sub testing {
+    my ( $method ) = @_;
+
+    undef $redis;
+    ( $redis, $skip_msg, $port ) = verify_redis();
+    isa_ok( $redis, 'Test::RedisServer' );
+
 my ( $coll, $name, $tmp, $id, $status_key, $queue_key, $list_key, @arr );
 my $uuid = new Data::UUID;
 my $msg = "attribute is set correctly";
@@ -93,8 +100,10 @@ for ( my $i = 1; $i <= 10; ++$i )
 # reverse updates
 for ( my $i = 1; $i <= 10; ++$i )
 {
-    $tmp = $coll->update( $i, $_ - $i, 10 - $_ + $i ) for $i..10;
-    ok $tmp, "correct update";
+    for ( my $j = $i; $j <= 10; $j++ ) {
+        $tmp = $coll->$method( $i, $j - $i, 10 - $j + $i );
+        is $tmp, $method eq 'update' ? 1 : $i, 'correct update';
+    }
 }
 
 # verify
@@ -133,7 +142,7 @@ for ( my $i = 1; $i <= 10; ++$i )
 $tmp = 0;
 for ( my $i = 1; $i <= 10; ++$i )
 {
-    ( $coll->update( $i, $_ - $i, ( 10 - $_ + $i ).'*' ), $tmp += bytes::length( ( 10 - $_ + $i ).'*' ) ) for $i..10;
+    ( $coll->$method( $i, $_ - $i, ( 10 - $_ + $i ).'*' ), $tmp += bytes::length( ( 10 - $_ + $i ).'*' ) ) for $i..10;
 }
 
 $coll->_call_redis( "DEL", $_ ) foreach $coll->_call_redis( "KEYS", $NAMESPACE.":*" );
@@ -160,17 +169,17 @@ $tmp = $coll->update( "bad_id", 0, '*' );
 ok !$tmp, "not updated";
 is $coll->_call_redis( "HLEN", $list_key ), 9, "correct list length";
 
-$tmp = $coll->update( "id", 3, '***' );
+$tmp = $coll->$method( "id", 3, '***' );
 ok $tmp, "not updated";
 is $coll->_call_redis( "HLEN", $list_key ), 9, "correct list length";
 
 # errors in the arguments
 
-dies_ok { $coll->update() } "expecting to die - no args";
+dies_ok { $coll->$method() } "expecting to die - no args";
 
 foreach my $arg ( ( undef, "", \"scalar", [], $uuid ) )
 {
-    dies_ok { $coll->update(
+    dies_ok { $coll->$method(
         $arg,
         0,
         '*',
@@ -179,7 +188,7 @@ foreach my $arg ( ( undef, "", \"scalar", [], $uuid ) )
 
 foreach my $arg ( ( undef, \"scalar", [], $uuid ) )
 {
-    dies_ok { $coll->update(
+    dies_ok { $coll->$method(
         'id',
         0,
         $arg,
@@ -188,7 +197,7 @@ foreach my $arg ( ( undef, \"scalar", [], $uuid ) )
 
 foreach my $arg ( ( undef, "", \"scalar", [], $uuid ) )
 {
-    dies_ok { $coll->update(
+    dies_ok { $coll->$method(
         'id',
         $arg,
         '*',
@@ -223,7 +232,7 @@ $coll->insert( $list_id, 4, $data, 4 );
 @arr = $coll->_call_redis( 'ZRANGE', $queue_key, 0, -1, 'WITHSCORES' );
 is "@arr", 'list_1 2 list_3 4 list_2 6', 'Q OK';
 
-$coll->update( $list_id, 4, $data, 4 );
+$coll->$method( $list_id, 4, $data, 4 );
 @arr = $coll->_call_redis( 'ZRANGE', $queue_key, 0, -1, 'WITHSCORES' );
 is "@arr", 'list_1 2 list_3 4 list_2 6', 'Q OK';
 $coll->update( $list_id, 4, $data, 3 );
@@ -250,7 +259,7 @@ is "@arr", 'list_1 2 list_3 3 list_2 6', 'Q OK';
 @arr = $coll->_call_redis( 'ZRANGE', $time_key, 0, -1, 'WITHSCORES' );
 is "@arr", '3 3 4 4 5 5', 'T OK';
 
-$coll->update( $list_id, 4, $data, 4 );
+$coll->$method( $list_id, 4, $data, 4 );
 @arr = $coll->_call_redis( 'ZRANGE', $queue_key, 0, -1, 'WITHSCORES' );
 is "@arr", 'list_1 2 list_3 3 list_2 6', 'Q OK';
 @arr = $coll->_call_redis( 'ZRANGE', $time_key, 0, -1, 'WITHSCORES' );
@@ -266,6 +275,27 @@ is "@arr", '4 1 3 3 5 5', 'T OK';
 @arr = $coll->_call_redis( 'ZRANGE', $queue_key, 0, -1, 'WITHSCORES' );
 is "@arr", 'list_3 1 list_1 2 list_2 6', 'Q OK';
 
+if ( $method eq 'upsert' ) {
+    $coll->$method( $list_id, 4, $data, 2 );    # update with $data_time
+    @arr = $coll->_call_redis( 'ZRANGE', $time_key, 0, -1, 'WITHSCORES' );
+    is "@arr", '4 2 3 3 5 5', 'T OK (data_time changed on update)';
+    my $new_data = $coll->receive( $list_id, 4 );
+    ok $new_data eq $data, 'data changed';
+
+    $coll->$method( $list_id, 4, 'new data' );  # update without $data_time
+    @arr = $coll->_call_redis( 'ZRANGE', $time_key, 0, -1, 'WITHSCORES' );
+    is "@arr", '4 2 3 3 5 5', 'T OK (data_time not changed on update)';
+    $new_data = $coll->receive( $list_id, 4 );
+    ok $new_data eq 'new data', 'data changed';
+}
+
 $coll->_call_redis( "DEL", $_ ) foreach $coll->_call_redis( "KEYS", $NAMESPACE.":*" );
+
+}
+
+foreach my $method ( qw( update upsert ) )
+{
+    testing( $method );
+}
 
 }
