@@ -1,5 +1,8 @@
 Revision history for Redis::CappedCollection module
 
+    CHANGES:
+    - Added 'upsert' method.
+
 1.03  Thu Jan  07 2016
     CHANGES:
     - Works with a Redis server 'maxmemory-policy' setting 'noeviction' only.
